[package]
name = "atcoder_rust_2026"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
cargo-snippet = { workspace = true }
ac-library-rs = { workspace = true }
hashbag = { workspace = true }
easy-ext = { workspace = true }
bstr = { workspace = true }
omniswap = { workspace = true }
num = { workspace = true }
num-integer = { workspace = true }
num-rational = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }
ndarray = { workspace = true }
rand = { workspace = true }
petgraph = { workspace = true }
regex = { workspace = true }
permutohedron = { workspace = true }
superslice = { workspace = true }
itertools = { workspace = true }
maplit = { workspace = true }
proconio = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
cli_test_dir = { workspace = true }

[[bin]]
name = "abc439_a"
path = "abc439/a/a.rs"

[[bin]]
name = "abc439_b"
path = "abc439/b/b.rs"

[[bin]]
name = "abc439_c"
path = "abc439/c/c.rs"

[[bin]]
name = "abc439_d"
path = "abc439/d/d.rs"

[[bin]]
name = "abc439_e"
path = "abc439/e/e.rs"

[[bin]]
name = "abc439_f"
path = "abc439/f/f.rs"

[[bin]]
name = "abc439_g"
path = "abc439/g/g.rs"

[[bin]]
name = "abc440_a"
path = "abc440/a/a.rs"

[[bin]]
name = "abc440_b"
path = "abc440/b/b.rs"

[[bin]]
name = "abc440_c"
path = "abc440/c/c.rs"

[[bin]]
name = "abc440_d"
path = "abc440/d/d.rs"

[[bin]]
name = "abc440_e"
path = "abc440/e/e.rs"

[[bin]]
name = "abc440_f"
path = "abc440/f/f.rs"

[[bin]]
name = "abc440_g"
path = "abc440/g/g.rs"

[[bin]]
name = "abc441_a"
path = "abc441/a/a.rs"

[[bin]]
name = "abc441_b"
path = "abc441/b/b.rs"

[[bin]]
name = "abc441_c"
path = "abc441/c/c.rs"

[[bin]]
name = "abc441_d"
path = "abc441/d/d.rs"

[[bin]]
name = "abc441_e"
path = "abc441/e/e.rs"

[[bin]]
name = "abc441_f"
path = "abc441/f/f.rs"

[[bin]]
name = "abc441_g"
path = "abc441/g/g.rs"
