[package]
name = "atcoder_rust_2026"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
cargo-snippet = { workspace = true }
ac-library-rs = { workspace = true }
hashbag = { workspace = true }
easy-ext = { workspace = true }
bstr = { workspace = true }
omniswap = { workspace = true }
num = { workspace = true }
num-integer = { workspace = true }
num-rational = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }
ndarray = { workspace = true }
rand = { workspace = true }
petgraph = { workspace = true }
regex = { workspace = true }
permutohedron = { workspace = true }
superslice = { workspace = true }
itertools = { workspace = true }
maplit = { workspace = true }
proconio = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
cli_test_dir = { workspace = true }

[[bin]]
name = "abc439_a"
path = "abc439/a/a.rs"

[[bin]]
name = "abc439_b"
path = "abc439/b/b.rs"

[[bin]]
name = "abc439_c"
path = "abc439/c/c.rs"

[[bin]]
name = "abc439_d"
path = "abc439/d/d.rs"

[[bin]]
name = "abc439_e"
path = "abc439/e/e.rs"

[[bin]]
name = "abc439_e_contest"
path = "abc439/e/e_contest.rs"

[[bin]]
name = "abc439_f"
path = "abc439/f/f.rs"

[[bin]]
name = "abc439_g"
path = "abc439/g/g.rs"

[[bin]]
name = "abc440_a"
path = "abc440/a/a.rs"

[[bin]]
name = "abc440_b"
path = "abc440/b/b.rs"

[[bin]]
name = "abc440_c"
path = "abc440/c/c.rs"

[[bin]]
name = "abc440_d"
path = "abc440/d/d.rs"

[[bin]]
name = "abc440_d_log2つ"
path = "abc440/d/d_log2つ.rs"

[[bin]]
name = "abc440_d_log2つ2"
path = "abc440/d/d_log2つ2.rs"

[[bin]]
name = "abc440_e"
path = "abc440/e/e.rs"

[[bin]]
name = "abc440_e2"
path = "abc440/e/e2.rs"

[[bin]]
name = "abc440_e_wa"
path = "abc440/e/e_wa.rs"

[[bin]]
name = "abc440_f"
path = "abc440/f/f.rs"

[[bin]]
name = "abc440_g"
path = "abc440/g/g.rs"

[[bin]]
name = "abc441_a"
path = "abc441/a/a.rs"

[[bin]]
name = "abc441_b"
path = "abc441/b/b.rs"

[[bin]]
name = "abc441_c"
path = "abc441/c/c.rs"

[[bin]]
name = "abc441_d"
path = "abc441/d/d.rs"

[[bin]]
name = "abc441_d_cartesian"
path = "abc441/d/d_cartesian.rs"

[[bin]]
name = "abc441_d_dfs"
path = "abc441/d/d_dfs.rs"

[[bin]]
name = "abc441_e"
path = "abc441/e/e.rs"

[[bin]]
name = "abc441_f"
path = "abc441/f/f.rs"

[[bin]]
name = "abc441_g"
path = "abc441/g/g.rs"

[[bin]]
name = "abc441_g_refactor"
path = "abc441/g/g_refactor.rs"

[[bin]]
name = "abc441_g_初期"
path = "abc441/g/g_初期.rs"

[[bin]]
name = "abc442_a"
path = "abc442/a/a.rs"

[[bin]]
name = "abc442_b"
path = "abc442/b/b.rs"

[[bin]]
name = "abc442_c"
path = "abc442/c/c.rs"

[[bin]]
name = "abc442_d"
path = "abc442/d/d.rs"

[[bin]]
name = "abc442_e"
path = "abc442/e/e.rs"

[[bin]]
name = "abc442_e2"
path = "abc442/e/e2.rs"
[[bin]]
name = "abc442_f"
path = "abc442/f/f.rs"

[[bin]]
name = "abc442_g"
path = "abc442/g/g.rs"

[[bin]]
name = "abc443_a"
path = "abc443/a/a.rs"

[[bin]]
name = "abc443_b"
path = "abc443/b/b.rs"

[[bin]]
name = "abc443_c"
path = "abc443/c/c.rs"

[[bin]]
name = "abc443_d"
path = "abc443/d/d.rs"

[[bin]]
name = "abc443_d2"
path = "abc443/d/d2.rs"

[[bin]]
name = "abc443_e"
path = "abc443/e/e.rs"

[[bin]]
name = "abc443_f"
path = "abc443/f/f.rs"

[[bin]]
name = "abc443_g"
path = "abc443/g/g.rs"

[[bin]]
name = "abc444_a"
path = "abc444/a/a.rs"

[[bin]]
name = "abc444_b"
path = "abc444/b/b.rs"

[[bin]]
name = "abc444_c"
path = "abc444/c/c.rs"

[[bin]]
name = "abc444_c_約数列挙"
path = "abc444/c/c_約数列挙.rs"

[[bin]]
name = "abc444_d"
path = "abc444/d/d.rs"

[[bin]]
name = "abc444_e"
path = "abc444/e/e.rs"

[[bin]]
name = "abc444_e_minleft_ft"
path = "abc444/e/e_minleft_ft.rs"

[[bin]]
name = "abc444_e_minleft_ft2"
path = "abc444/e/e_minleft_ft2.rs"

[[bin]]
name = "abc444_f"
path = "abc444/f/f.rs"

[[bin]]
name = "abc444_g"
path = "abc444/g/g.rs"

[[bin]]
name = "abc445_a"
path = "abc445/a/a.rs"

[[bin]]
name = "abc445_b"
path = "abc445/b/b.rs"

[[bin]]
name = "abc445_c"
path = "abc445/c/c.rs"

[[bin]]
name = "abc445_c_contest"
path = "abc445/c/c_contest.rs"

[[bin]]
name = "abc445_d"
path = "abc445/d/d.rs"

[[bin]]
name = "abc445_e"
path = "abc445/e/e.rs"

[[bin]]
name = "abc445_e_contest"
path = "abc445/e/e_contest.rs"

[[bin]]
name = "abc445_f"
path = "abc445/f/f.rs"

[[bin]]
name = "abc445_g"
path = "abc445/g/g.rs"

[[bin]]
name = "abc446_a"
path = "abc446/a/a.rs"

[[bin]]
name = "abc446_b"
path = "abc446/b/b.rs"

[[bin]]
name = "abc446_c"
path = "abc446/c/c.rs"

[[bin]]
name = "abc446_c_btree"
path = "abc446/c/c_btree.rs"

[[bin]]
name = "abc446_d"
path = "abc446/d/d.rs"

[[bin]]
name = "abc446_d_cc"
path = "abc446/d/d_cc.rs"

[[bin]]
name = "abc446_e"
path = "abc446/e/e.rs"

[[bin]]
name = "abc446_e_ix"
path = "abc446/e/e_ix.rs"

[[bin]]
name = "abc446_f"
path = "abc446/f/f.rs"

[[bin]]
name = "abc446_g"
path = "abc446/g/g.rs"

[[bin]]
name = "abc447_a"
path = "abc447/a/a.rs"

[[bin]]
name = "abc447_b"
path = "abc447/b/b.rs"

[[bin]]
name = "abc447_c"
path = "abc447/c/c.rs"

[[bin]]
name = "abc447_d"
path = "abc447/d/d.rs"

[[bin]]
name = "abc447_d_contest"
path = "abc447/d/d_contest.rs"

[[bin]]
name = "abc447_e"
path = "abc447/e/e.rs"

[[bin]]
name = "abc447_f"
path = "abc447/f/f.rs"

[[bin]]
name = "abc447_f_dsu"
path = "abc447/f/f_dsu.rs"

[[bin]]
name = "abc447_g"
path = "abc447/g/g.rs"

[[bin]]
name = "abc448_a"
path = "abc448/a/a.rs"

[[bin]]
name = "abc448_b"
path = "abc448/b/b.rs"

[[bin]]
name = "abc448_c"
path = "abc448/c/c.rs"

[[bin]]
name = "abc448_d"
path = "abc448/d/d.rs"

[[bin]]
name = "abc448_d_recur_closure"
path = "abc448/d/d_recur_closure.rs"

[[bin]]
name = "abc448_e"
path = "abc448/e/e.rs"

[[bin]]
name = "abc448_e_bin_lifting"
path = "abc448/e/e_bin_lifting.rs"

[[bin]]
name = "abc448_e_dyn"
path = "abc448/e/e_dyn.rs"

[[bin]]
name = "abc448_f"
path = "abc448/f/f.rs"

[[bin]]
name = "abc448_g"
path = "abc448/g/g.rs"

[[bin]]
name = "abc449_a"
path = "abc449/a/a.rs"

[[bin]]
name = "abc449_b"
path = "abc449/b/b.rs"

[[bin]]
name = "abc449_c"
path = "abc449/c/c.rs"

[[bin]]
name = "abc449_d"
path = "abc449/d/d.rs"

[[bin]]
name = "abc449_d_contest"
path = "abc449/d/d_contest.rs"

[[bin]]
name = "abc449_e"
path = "abc449/e/e.rs"

[[bin]]
name = "abc449_f"
path = "abc449/f/f.rs"

[[bin]]
name = "abc449_g"
path = "abc449/g/g.rs"

[[bin]]
name = "abc450_a"
path = "abc450/a/a.rs"

[[bin]]
name = "abc450_b"
path = "abc450/b/b.rs"

[[bin]]
name = "abc450_c"
path = "abc450/c/c.rs"

[[bin]]
name = "abc450_d"
path = "abc450/d/d.rs"

[[bin]]
name = "abc450_e"
path = "abc450/e/e.rs"

[[bin]]
name = "abc450_f"
path = "abc450/f/f.rs"

[[bin]]
name = "abc450_g"
path = "abc450/g/g.rs"

[[bin]]
name = "abc451_a"
path = "abc451/a/a.rs"

[[bin]]
name = "abc451_b"
path = "abc451/b/b.rs"

[[bin]]
name = "abc451_c"
path = "abc451/c/c.rs"

[[bin]]
name = "abc451_d"
path = "abc451/d/d.rs"

[[bin]]
name = "abc451_e"
path = "abc451/e/e.rs"

[[bin]]
name = "abc451_f"
path = "abc451/f/f.rs"

[[bin]]
name = "abc451_g"
path = "abc451/g/g.rs"

[[bin]]
name = "abc452_a"
path = "abc452/a/a.rs"

[[bin]]
name = "abc452_b"
path = "abc452/b/b.rs"

[[bin]]
name = "abc452_c"
path = "abc452/c/c.rs"

[[bin]]
name = "abc452_c_ix"
path = "abc452/c/c_ix.rs"

[[bin]]
name = "abc452_d"
path = "abc452/d/d.rs"

[[bin]]
name = "abc452_d_dp"
path = "abc452/d/d_dp.rs"

[[bin]]
name = "abc452_e"
path = "abc452/e/e.rs"

[[bin]]
name = "abc452_f"
path = "abc452/f/f.rs"

[[bin]]
name = "abc452_g"
path = "abc452/g/g.rs"

[[bin]]
name = "abc453_a"
path = "abc453/a/a.rs"

[[bin]]
name = "abc453_b"
path = "abc453/b/b.rs"

[[bin]]
name = "abc453_c"
path = "abc453/c/c.rs"

[[bin]]
name = "abc453_d"
path = "abc453/d/d.rs"

[[bin]]
name = "abc453_d_ix"
path = "abc453/d/d_ix.rs"

[[bin]]
name = "abc453_e"
path = "abc453/e/e.rs"

[[bin]]
name = "abc453_f"
path = "abc453/f/f.rs"

[[bin]]
name = "abc453_g"
path = "abc453/g/g.rs"
